# Todo-AI-Assistant

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  deploy-backend.sh
.claude/: settings.json
.claude/agents/: cloud-ops-agent.md  interface-engineer.md  logic-architect.md
.claude/commands/: ai-mcp-integration-skill.md  cloud-native-dapr-skill.md  fastapi-web-api-skill.md  python-logic-skill.md
.specify/memory/: constitution.md
docs/: demo-script.md  local-setup.md
specs/001-phase1-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-backend-api-db/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
todo-cli/: .gitignore  CLAUDE.md  README.md  pyproject.toml
todo-cli/src/: cli.py  logic.py  main.py
todo-cli/tests/unit/: test_logic.py  test_validation.py
todo-web-app/: CLAUDE.md
todo-web-app/backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
todo-web-app/backend/app/: auth.py  db.py  main.py  models.py  schemas.py
todo-web-app/backend/app/agent/: __init__.py  prompts.py  runner.py
todo-web-app/backend/app/logic/: __init__.py  task_ops.py
todo-web-app/backend/app/mcp/: __init__.py  server.py
todo-web-app/backend/app/routes/: chat.py  tasks.py
todo-web-app/backend/migrations/: env.py
todo-web-app/backend/migrations/versions/: 001_create_tasks_table.py  002_add_conversations_messages.py
todo-web-app/services/notification/: Dockerfile  pyproject.toml
todo-web-app/services/notification/app/: main.py
(+269 files in other folders)
